--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;700&family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;700&family=Roboto:wght@400;700&display=Grechen+Fuemen&display=swap");
 
 /*
 font-family: 'Kaisei Tokumin', serif;
 font-family: 'Roboto', sans-serif;
+font-family: 'Grechen Fuemen', cursive;
 */
 
 *,
@@ -16,6 +17,9 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   text-align: center;
+}
+html {
+  scroll-behavior: smooth;
 }
 li {
   list-style-type: none;
@@ -46,21 +50,26 @@ a {
 .container {
   border: 1px dotted red;
   margin: 0 auto;
-  max-width: 420px;
+  width: 96%;
 }
 
-/* Header*/
+/*** Header ***/
 header {
-  border-bottom: 1px solid #e2e8f0;
   position: fixed;
-  width: 420px;
+  width: 96%;
+  background-color: cyan; /*temp*/
+  z-index: 1000;
 }
-
+.logo {
+  flex-basis: 15%;
+  background-color: darkgoldenrod; /*temp*/
+  font-family: "Grechen Fuemen", cursive;
+}
 .navbar {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
-  padding: 1rem 1.5rem;
+  padding: 1rem 0;
 }
 .bar {
   display: block;
@@ -72,19 +81,28 @@ header {
   background-color: #101010;
 }
 .nav-menu {
-  position: fixed;
-  left: -100%;
-  top: 5rem;
+  position: absolute;
+  left: -120%;
+  top: 4rem;
+  display: flex;
   flex-direction: column;
-  background-color: #fff;
-  width: 100%;
-  border-radius: 10px;
-  text-align: center;
+  justify-content: center;
+  background-color: rgb(152, 165, 235);
+  flex-basis: 80%;
   transition: 0.3s;
-  box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
 }
 .nav-menu.active {
   left: 0;
+  width: 100%;
+  min-height: 30vh;
+}
+.nav-menu.active .nav-link {
+  padding: 1rem;
+  display: inline-block;
+}
+.nav-menu.active .nav-link:hover {
+  background-color: chocolate;
+  font-size: 1.2rem;
 }
 .hamburger {
   display: block;
@@ -103,12 +121,9 @@ header {
   color: #482ff7;
 }
 
-/*Welcome section*/
-.welcome {
-  margin-top: 62px;
-}
+/*** Welcome section ***/
 .welcome__article {
-  margin: 1rem auto;
+  margin: 0 auto;
   width: 70%;
 }
 .welcome__article figure {
@@ -119,68 +134,74 @@ header {
   border-radius: 50%;
 }
 
-/*skills section*/
-
-.skills__table {
+/*** skills section ***/
+.skills-box {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  gap: 1%;
 }
-.skills__list {
-  flex-basis: 30%;
+.hard-skills {
+  flex-basis: 15%;
+  text-transform: uppercase;
+  line-height: 1.8rem;
 }
-.skills__levels {
-  flex-basis: 65%;
+.hard-skills li {
+  text-align: right;
 }
-.skills__list li {
-  margin: 1rem 0;
+.skills-levels {
+  flex-basis: 50%;
 }
-/* .skills__list-future {
-  flex-basis: 30%;
-  order: 3;
-} */
+.level-box {
+  width: 100%;
+  background-color: #ddd;
+}
 .level {
-  margin: 1rem 0;
-  height: 1.5rem;
-  position: relative;
-  /* background-color: blueviolet; */
-  border: 1px solid blue;
-  border-radius: 25px;
-  padding: 0.5rem;
-  box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
+  text-align: right;
+  color: white;
+  line-height: 1.8rem;
 }
-.level > span {
-  width: 33%;
-  display: block;
-  height: 100%;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  background-color: rgb(43, 194, 83);
-  background-image: linear-gradient(to bottom, #f1a165, #f36d0a);
-  box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
-    inset 0 -2px 6px rgba(0, 0, 0, 0.4);
-  position: relative;
-  overflow: hidden;
+.html {
+  width: 80%;
+  background-color: mediumorchid;
 }
-
-.skills-container {
-  width: 95%;
+.css {
+  width: 70%;
+  background-color: mediumpurple;
+}
+.js {
+  width: 50%;
+  background-color: mediumseagreen;
+}
+.git {
+  width: 50%;
+  background-color: orchid;
+}
+.figma {
+  width: 20%;
+  background-color: deepskyblue;
+}
+.node {
+  width: 15%;
+  background-color: royalblue;
+}
+.language-list {
+  width: 30%;
   margin: 0 auto;
+}
+.language-list li {
+  text-align: center;
 }
 
 /* Portfolio Slider */
 .slider-container {
-  border: 1px dotted red;
+  border: 1px dotted rgb(0, 183, 255);
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 95%;
+  width: 100%;
   position: relative;
-
-  /* height: 300px; */
 }
 .slider-container button {
   display: block;
@@ -191,35 +212,32 @@ header {
   background-color: transparent;
   color: slateblue;
 }
+
 .slider-container button:hover {
   color: blue;
 }
 .slider {
   position: relative;
   flex-basis: 90%;
-  min-height: 300px;
-
+  height: 320px;
   border: 1px dotted red;
   overflow: hidden;
 }
 .slide {
   position: absolute;
   border: 1px solid blue;
-
   display: none;
   animation: 0.5s ease-in-out;
   width: 100%;
-
-  /* height: auto; */
 }
 .slide h4 {
   margin: 0.5rem auto;
 }
 .slide img {
   width: 100%;
-
-  object-fit: contain;
-  /* object-position: 50% 50%; */
+  height: 250px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .active,
@@ -250,17 +268,23 @@ pre {
   text-align: left;
 }
 
-/* Education */
-.education {
+/*** Education ***/
+/* .education {
   width: 95%;
+} */
+.edu-lists {
+  padding: 0 1rem;
 }
 .cert-container {
   margin: 0 auto;
-  width: 95%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .cert-box {
-  margin: 1rem auto;
-  width: 70%;
+  width: 250px;
 }
 .cert-container img {
   width: 100%;
@@ -310,8 +334,65 @@ pre {
     left: 0;
   }
 }
+@media screen and (min-width: 480px) {
+  .container,
+  header {
+    max-width: 1100px;
+  }
+  .nav-menu {
+    position: static;
 
+    flex-direction: row;
+    justify-content: right;
+    gap: 2%;
+  }
+  .nav-link {
+    padding: 1rem 0;
+  }
+  .nav-link:hover {
+    background-color: ivory; /*temp*/
+    color: lightskyblue; /*temp*/
+  }
+  .hamburger {
+    display: none;
+  }
+  /***Welcome***/
+  .welcome__article {
+    width: 50%;
+  }
+  .welcome__article img {
+    width: 70%;
+    border-radius: 50%;
+  }
+  /***Skills section***/
+
+  /*** Examples***/
+  pre {
+    margin: 0 auto;
+    width: 60%;
+  }
+  .slider-container {
+    width: 55%;
+    height: 450px;
+  }
+  .slider {
+    height: 385px;
+  }
+  .slide img {
+    height: 320px;
+  }
+  /*** education ***/
+  .edu-lists li {
+    text-align: center;
+  }
+  .cert-container {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
 /*Temp*/
 section {
-  min-height: 30vh;
+  min-height: 100vh;
+  padding-top: 8rem;
 }
