--- a/style.css
+++ b/style.css
@@ -1,11 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;700&family=Roboto:wght@400;700&display=Grechen+Fuemen&display=swap");
-
-/*
-font-family: 'Kaisei Tokumin', serif;
-font-family: 'Roboto', sans-serif;
-font-family: 'Grechen Fuemen', cursive;
-*/
-
 *,
 *::before,
 *::after {
@@ -17,6 +10,11 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   text-align: center;
+  background: linear-gradient(
+    109.6deg,
+    rgba(156, 252, 248, 1) 11.2%,
+    rgba(110, 123, 251, 1) 91.1%
+  );
 }
 html {
   scroll-behavior: smooth;
@@ -28,9 +26,9 @@ li {
   font-weight: 400;
 }
 section {
-  border: 1px dotted blue;
   margin: 0 auto;
   width: 100%;
+  padding-top: 5rem;
 }
 h1,
 h2,
@@ -38,7 +36,7 @@ h3,
 h4,
 h5 {
   text-transform: uppercase;
-  margin: 1rem 0;
+  padding: 1rem 0;
 }
 p {
   font-family: "Kaisei Tokumin", serif;
@@ -48,22 +46,24 @@ a {
   text-decoration: none;
 }
 .container {
-  border: 1px dotted red;
   margin: 0 auto;
   width: 96%;
+  background-color: rgba(222, 241, 243, 0.3);
 }
 
 /*** Header ***/
 header {
+  padding: 0 0.4rem;
   position: fixed;
   width: 96%;
-  background-color: cyan; /*temp*/
-  z-index: 1000;
+  z-index: 2000;
+  background-image: linear-gradient(135deg, #5efce8 10%, #736efe 100%);
+  color: ivory;
 }
 .logo {
   flex-basis: 15%;
-  background-color: darkgoldenrod; /*temp*/
   font-family: "Grechen Fuemen", cursive;
+  text-align: left;
 }
 .navbar {
   display: flex;
@@ -78,7 +78,7 @@ header {
   margin: 5px auto;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: #101010;
+  background-color: #faf6f6;
 }
 .nav-menu {
   position: absolute;
@@ -87,7 +87,6 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgb(152, 165, 235);
   flex-basis: 80%;
   transition: 0.3s;
 }
@@ -95,13 +94,15 @@ header {
   left: 0;
   width: 100%;
   min-height: 30vh;
+  background-image: linear-gradient(135deg, #5efce8 10%, #736efe 100%);
 }
 .nav-menu.active .nav-link {
   padding: 1rem;
   display: inline-block;
+  color: ivory;
 }
 .nav-menu.active .nav-link:hover {
-  background-color: chocolate;
+  background-color: rgb(109, 152, 245);
   font-size: 1.2rem;
 }
 .hamburger {
@@ -189,13 +190,9 @@ header {
   width: 30%;
   margin: 0 auto;
 }
-.language-list li {
-  text-align: center;
-}
 
 /* Portfolio Slider */
 .slider-container {
-  border: 1px dotted rgb(0, 183, 255);
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
@@ -219,19 +216,21 @@ header {
 .slider {
   position: relative;
   flex-basis: 90%;
-  height: 320px;
-  border: 1px dotted red;
+  height: 370px;
   overflow: hidden;
 }
 .slide {
   position: absolute;
-  border: 1px solid blue;
   display: none;
   animation: 0.5s ease-in-out;
   width: 100%;
 }
-.slide h4 {
-  margin: 0.5rem auto;
+
+.slide p {
+  text-align: left;
+  color: black;
+  line-height: 2rem;
+  font-size: 1.1rem;
 }
 .slide img {
   width: 100%;
@@ -269,10 +268,9 @@ pre {
 }
 
 /*** Education ***/
-/* .education {
-  width: 95%;
-} */
 .edu-lists {
+  margin: 0 auto;
+  width: 70%;
   padding: 0 1rem;
 }
 .cert-container {
@@ -282,6 +280,7 @@ pre {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2rem;
 }
 .cert-box {
   width: 250px;
@@ -292,29 +291,31 @@ pre {
 
 /* About */
 .about {
-  width: 95%;
   margin: 0 auto;
+}
+.about p {
+  text-align: left;
 }
 .about iframe {
   width: 100%;
   height: 315px;
-
   border: none;
 }
 
 /* Contacts */
-.contacts {
-  width: 95%;
+.contacts-list {
+  width: 30%;
+  margin: 0 auto;
 }
-
 /* Footer */
 .footer-icons {
   display: flex;
   margin: 0 auto;
-  width: 95%;
+  padding: 0.5rem;
   height: 3rem;
   justify-content: space-between;
   align-items: center;
+  background-image: linear-gradient(135deg, #5efce8 10%, #736efe 100%);
 }
 
 @keyframes left {
@@ -334,7 +335,7 @@ pre {
     left: 0;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 520px) {
   .container,
   header {
     max-width: 1100px;
@@ -348,10 +349,10 @@ pre {
   }
   .nav-link {
     padding: 1rem 0;
+    color: rgb(234, 248, 255);
   }
   .nav-link:hover {
-    background-color: ivory; /*temp*/
-    color: lightskyblue; /*temp*/
+    color: lightskyblue;
   }
   .hamburger {
     display: none;
@@ -376,23 +377,31 @@ pre {
     height: 450px;
   }
   .slider {
-    height: 385px;
+    height: 470px;
   }
   .slide img {
     height: 320px;
   }
   /*** education ***/
-  .edu-lists li {
-    text-align: center;
-  }
   .cert-container {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
   }
-}
-/*Temp*/
-section {
-  min-height: 100vh;
-  padding-top: 8rem;
+  /*** About ***/
+  .video-box {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .video-box p {
+    flex-basis: 426px;
+    text-align: left;
+  }
+  .about iframe {
+    width: 426px;
+    height: 240px;
+  }
 }
