refactor: minor changes in code

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ header {
   margin: 0 auto;
 }
 
-/* Portfolio Slider */
+/*** Portfolio Slider ***/
 .slider-container {
   margin: 0 auto;
   display: flex;
