--- a/style.css
+++ b/style.css
@@ -10,11 +10,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   text-align: center;
-  background: linear-gradient(
-    109.6deg,
-    rgba(156, 252, 248, 1) 11.2%,
-    rgba(110, 123, 251, 1) 91.1%
-  );
 }
 html {
   scroll-behavior: smooth;
@@ -178,12 +173,12 @@ header {
   width: 50%;
   background-color: orchid;
 }
-.figma {
-  width: 20%;
+.typescript {
+  width: 40%;
   background-color: deepskyblue;
 }
-.node {
-  width: 15%;
+.angular {
+  width: 7%;
   background-color: royalblue;
 }
 .language-list {
