--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   text-align: center;
+  background: linear-gradient(
+    109.6deg,
+    rgba(156, 252, 248, 1) 11.2%,
+    rgba(110, 123, 251, 1) 91.1%
+  );
 }
 html {
   scroll-behavior: smooth;
@@ -173,12 +178,12 @@ header {
   width: 50%;
   background-color: orchid;
 }
-.typescript {
-  width: 40%;
+.figma {
+  width: 20%;
   background-color: deepskyblue;
 }
-.angular {
-  width: 7%;
+.node {
+  width: 15%;
   background-color: royalblue;
 }
 .language-list {
